# bei_heruwingchun

./: CMakeLists.txt  README.md  pubspec.yaml
.github/workflows/: build_apk.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bei_trade_app/: MainActivity.kt
backend/: app.py  kodesaham.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: EfekAutoSplash.dart  EfekTekanSplash  candlestick_chart.dart  finance_engine_bridge.dart  main.dart  stock_stream_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: finance_engine.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
